--- a/src/navbar/src/index.css
+++ b/src/navbar/src/index.css
@@ -1,34 +1,7 @@
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #111d4a;
-  color: white;
-  font-size: 18px;
-  font-weight: bold;
-  width: 100%;
-  height: 75px;
-  display: flex;
-  align-items: center;
-}
-
-.navbar ul {
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-  height: 100%;
-}
-
-.navbar li {
-  padding-right: 24px;
-  height: 100%;
-}
-
-.navbar li:hover {
-  opacity: 0.8;
-}
-
-.navbar a {
-  text-decoration: none;
-  color: white;
+.logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 28px 16px 0;
+  float: left;
 }
